--- a/app/webroot/css/login.css
+++ b/app/webroot/css/login.css
@@ -1,14 +1,14 @@
-/* ------------ */
-/* =  RESET  */
-/* ---------- */
+/* ---------------------------------------
+				Reset
+------------------------------------------ */
 /* line 5, login.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-/* ----------------------- */
-/* =  STYLES DE BASE  */
-/* -------------------- */
+/* ---------------------------------------
+				Style de base
+------------------------------------------ */
 /* line 11, login.scss */
 body {
   background-color: #202021;
@@ -22,25 +22,25 @@ body {
 }
 
 @font-face {
-  font-family: 'Honey';
-  src: url("fonts/honey/honey.eot");
-  src: url("fonts/honey/honey.eot?#iefix") format("eot"), url("fonts/honey/honey.woff") format("woff"), url("fonts/honey/honey.ttf") format("truetype"), url("fonts/honey/honey.svg#webfontHBinlNfs") format("svg");
+  font-family: 'riesling';
+  src: url("fonts/riesling/riesling.eot");
+  src: url("fonts/riesling/riesling.eot?#iefix") format("embedded-opentype"), url("fonts/riesling/riesling.woff") format("woff"), url("fonts/riesling/riesling.ttf") format("truetype"), url("fonts/riesling/riesling.svg#RieslingRegular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
-/* ------------------- */
-/* =  PARAGRAPHE  */
-/* ----------------- */
+/* ---------------------------------------
+			Paragraphe
+------------------------------------------ */
 /* line 26, login.scss */
 p {
   padding: 0;
   margin: 0;
 }
 
-/* ----------- */
-/* =  LIENS  */
-/* --------- */
+/* ---------------------------------------
+			Liens
+------------------------------------------ */
 /* line 32, login.scss */
 a {
   text-decoration: none;
@@ -57,54 +57,45 @@ a img {
   border: none;
 }
 
-/* --------------------- */
-/* =  TYPE EN-LIGNE  */
-/* ------------------- */
+/* ---------------------------------------
+			Types en ligne
+------------------------------------------ */
 /* line 40, login.scss */
 span.couleur_bleu {
   color: #2681D0;
 }
 
-/* -------------------- */
-/* =  FRAMEWORKS  */
-/* ------------------ */
+/* ---------------------------------------
+			Frameworks
+------------------------------------------ */
 /* line 46, login.scss */
 .arrondi, input[type=text], input[type=password], input[type=submit] {
-  -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
-  -o-border-radius: 8px;
+  -moz-border-radius: 8px;
   -ms-border-radius: 8px;
-  -khtml-border-radius: 8px;
+  -o-border-radius: 8px;
   border-radius: 8px;
 }
 
 /* line 47, login.scss */
-.animer, section#formConnexion h1 a {
-  -moz-transition-property: all;
-  -webkit-transition-property: all;
-  -o-transition-property: all;
-  transition-property: all;
-  -moz-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  transition-duration: 1s;
+.animer, section#form_connexion h1 a {
+  -webkit-transition: all, 0.75s;
+  -moz-transition: all, 0.75s;
+  -ms-transition: all, 0.75s;
+  -o-transition: all, 0.75s;
+  transition: all, 0.75s;
 }
 
-/* line 48, login.scss */
-.formConnexionTextShadow, section#formConnexion h1 a:hover, section#formConnexion h1 a:focus {
-  text-shadow: white 0px 0px 15px;
-}
-
-/* --------------- */
-/* =  WRAPPER  */
-/* ------------- */
-/* line 54, login.scss */
+/* ---------------------------------------
+			Wrapper
+------------------------------------------ */
+/* line 53, login.scss */
 #wrapper {
   width: 100%;
   margin: 80px auto 0;
 }
 
-/* line 56, login.scss */
+/* line 55, login.scss */
 #pancarte {
   background: url("images/login/fait-par-kryzalead.png") 0 0 no-repeat;
   width: 252px;
@@ -115,13 +106,13 @@ span.couleur_bleu {
   vertical-align: top;
 }
 
-/* line 57, login.scss */
+/* line 56, login.scss */
 #pancarte:hover {
   background: url("images/login/fait-par-kryzalead-hover.png") 0 0 no-repeat;
 }
 
-/* line 59, login.scss */
-section#formConnexion {
+/* line 58, login.scss */
+section#form_connexion {
   margin: 0 auto;
   color: #999;
   display: inline-block;
@@ -129,47 +120,49 @@ section#formConnexion {
   width: 65%;
 }
 
-/* line 60, login.scss */
-section#formConnexion h1 {
+/* line 59, login.scss */
+section#form_connexion h1 {
   text-align: center;
   padding-bottom: 60px;
   margin: 0;
 }
 
-/* line 61, login.scss */
-section#formConnexion h1 a {
-  font: normal 4em 'Honey';
+/* line 60, login.scss */
+section#form_connexion h1 a {
+  font: normal 4em 'riesling';
   color: #679A01;
   cursor: default;
 }
 
-/* line 62, login.scss */
-section#formConnexion h1 a:hover, section#formConnexion h1 a:focus {
+/* line 61, login.scss */
+section#form_connexion h1 a:hover, section#form_connexion h1 a:focus {
   text-decoration: none;
-  color: #679A01;
+  color: #AA4673;
+  text-shadow: 0px 0px 15px #ffffff;
+  filter: dropshadow(color=white, offx=0, offy=0);
 }
 
-/* line 63, login.scss */
-section#formConnexion p {
+/* line 62, login.scss */
+section#form_connexion p {
   text-align: center;
   font: normal 0.95em Arial;
 }
 
-/* line 64, login.scss */
-section#formConnexion a {
+/* line 63, login.scss */
+section#form_connexion a {
   font-weight: bold;
   color: #2681D0;
   text-decoration: none;
 }
 
-/* line 65, login.scss */
-section#formConnexion a:hover {
+/* line 64, login.scss */
+section#form_connexion a:hover {
   font-weight: bold;
   color: #679A01;
   text-decoration: underline;
 }
 
-/* line 67, login.scss */
+/* line 66, login.scss */
 #login {
   width: 358px;
   height: 203px;
@@ -178,7 +171,7 @@ section#formConnexion a:hover {
   background: url("images/login/gmap.jpg") top left repeat;
 }
 
-/* line 68, login.scss */
+/* line 67, login.scss */
 #login label {
   color: #8C8C8C;
   font-size: 0.9em;
@@ -187,7 +180,7 @@ section#formConnexion a:hover {
   position: relative;
 }
 
-/* line 70, login.scss */
+/* line 69, login.scss */
 form#loginform {
   width: 302px;
   height: 124px;
@@ -197,7 +190,7 @@ form#loginform {
   position: absolute;
 }
 
-/* line 72, login.scss */
+/* line 71, login.scss */
 #logmask {
   background: url("images/login/rmap.jpg") 0 0 repeat;
   position: absolute;
@@ -209,7 +202,7 @@ form#loginform {
   z-index: 3;
 }
 
-/* line 73, login.scss */
+/* line 72, login.scss */
 .alert-message {
   font-size: 0.95em;
   color: #E85E35;
@@ -217,13 +210,13 @@ form#loginform {
   margin-top: -6px;
 }
 
-/* line 75, login.scss */
+/* line 74, login.scss */
 label {
   width: 100px;
   margin-top: 20px;
 }
 
-/* line 76, login.scss */
+/* line 75, login.scss */
 input[type=text], input[type=password] {
   background-color: #2681D0;
   width: 150px;
@@ -234,7 +227,7 @@ input[type=text], input[type=password] {
   color: #FFF;
 }
 
-/* line 77, login.scss */
+/* line 76, login.scss */
 input[type=text]:hover, input[type=password]:hover {
   border: 1px solid #BAE2FF;
   background: #E5A14E;
@@ -242,7 +235,7 @@ input[type=text]:hover, input[type=password]:hover {
   color: #000;
 }
 
-/* line 78, login.scss */
+/* line 77, login.scss */
 input[type=submit] {
   margin: 15px 0 0 200px;
   background-color: #222;
@@ -256,16 +249,16 @@ input[type=submit] {
   border: 1px solid #212121;
 }
 
-/* line 79, login.scss */
+/* line 78, login.scss */
 input[type=submit]:hover {
   color: #2681D0;
   background-color: #333;
   border: 1px solid #202121;
 }
 
-/* ---------------------------- */
-/* =  IE8~7 fix compatibilite  */
-/* --------------------------- */
+/* ---------------------------------------
+			IE8~7 fix compatibilite
+------------------------------------------ */
 /* line 85, login.scss */
 div.alert-ie {
   width: 100%;
