--- a/app/webroot/css/ok.css
+++ b/app/webroot/css/ok.css
@@ -913,6 +913,7 @@ p {
   margin-left: 90px;
 }
 
+/* -- Content white -- */
 /* line 590, ok.scss */
 #content.white .bloc .bloc_titre {
   background: url(images/setting_button/blocs_titles/white-title.png);
@@ -1258,65 +1259,502 @@ p {
   color: #C21C1C;
 }
 
+/* line 802, ok.scss */
+#content input[type="submit"] {
+  border: 1px solid #BBB;
+  color: #464646;
+  text-decoration: none;
+  font-size: 12px!important;
+  line-height: 13px;
+  padding: 3px 8px;
+  cursor: pointer;
+  border-width: 1px;
+  border-style: solid;
+  -webkit-border-radius: 11px;
+  border-radius: 11px;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+/* line 804, ok.scss */
+#content .liste_table {
+  color: #333;
+  margin-top: 5px;
+  border: 1px solid #DFDFDF;
+  background-color: #F9F9F9;
+}
+
+/* line 805, ok.scss */
+#content .liste_table th, #content .liste_table td {
+  border-top: 1px solid white;
+  border-bottom: 1px solid #DFDFDF;
+  text-align: left;
+  padding: 4px 7px 2px;
+  vertical-align: top;
+}
+
+/* line 806, ok.scss */
+#content .liste_table th {
+  background-color: #F1F1F1;
+  font-size: 14px;
+  height: 36px;
+  line-height: 36px;
+}
+
+/* line 807, ok.scss */
+#content .liste_table th a {
+  color: #21759B;
+  text-decoration: none;
+}
+
+/* line 808, ok.scss */
+#content .liste_table th a:hover {
+  color: #464646;
+}
+
+/* line 810, ok.scss */
+#content .liste_table .colonne_check {
+  width: 30px;
+  text-align: center;
+}
+
+/* line 812, ok.scss */
+#content .liste_table td {
+  font-size: 12px;
+  padding: 4px 7px 2px;
+  vertical-align: top;
+}
+
+/* line 813, ok.scss */
+#content .liste_table td a:hover {
+  color: #D74E21;
+}
+
+/* line 814, ok.scss */
+#content .liste_table .action_admin {
+  text-align: left;
+  visibility: hidden;
+  margin-top: 10px;
+}
+
+/* line 815, ok.scss */
+#content .liste_table .action_admin a {
+  font-size: 0.9em;
+}
+
+/* line 816, ok.scss */
+#content .liste_table .action_admin a.upd {
+  color: #257EA8;
+}
+
+/* line 817, ok.scss */
+#content .liste_table .action_admin a.upd:hover {
+  color: #D74E21;
+}
+
+/* line 818, ok.scss */
+#content .liste_table .action_admin a.del {
+  color: #BC0B0B;
+}
+
+/* line 819, ok.scss */
+#content .liste_table .action_admin a.del:hover {
+  color: #FF0000;
+}
+
+/* line 820, ok.scss */
+#content .liste_table tr:hover {
+  background-color: #fff;
+}
+
+/* line 821, ok.scss */
+#content .liste_table tr:hover .action_admin {
+  visibility: visible;
+}
+
+/* line 823, ok.scss */
+#content .action_groupees {
+  margin-top: 10px;
+}
+
+/* line 824, ok.scss */
+#content .action_groupees div {
+  display: inline-block;
+}
+
+/* line 825, ok.scss */
+#content .action_groupees select {
+  padding: 2px;
+  height: 2em;
+}
+
+/* line 827, ok.scss */
+#content .search_box {
+  float: right;
+}
+
+/* line 828, ok.scss */
+#content .search_box .submit {
+  display: inline-block;
+}
+
+/* line 830, ok.scss */
+#content .list_top_table {
+  margin-top: 5px;
+}
+
+/* line 831, ok.scss */
+#content .list_top_table li {
+  display: inline-block;
+}
+
+/* line 832, ok.scss */
+#content .list_top_table li a:hover {
+  color: #ff4b33;
+}
+
+/* line 833, ok.scss */
+#content .list_top_table .current {
+  color: #000;
+  font-weight: bold;
+}
+
+/* line 835, ok.scss */
+#content .bloc_total_element {
+  float: right;
+  cursor: default;
+  height: 30px;
+  line-height: 30px;
+  font-size: 12px;
+  font-style: italic;
+  margin-right: 10px;
+  color: #555;
+}
+
+/* line 837, ok.scss */
+#content .comment-post span {
+  background-color: #BBB;
+  display: inline-block;
+  text-align: center;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* line 838, ok.scss */
+#content .comment-post span.comment-waiting {
+  background-color: #21759B;
+}
+
+/* line 839, ok.scss */
+#content .comment-post span:hover {
+  background-color: #D74E21;
+}
+
+/* line 840, ok.scss */
+#content .comment-post span a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 0 6px;
+  height: 1.4em;
+  line-height: 1.4em;
+}
+
+/* line 841, ok.scss */
+#content .comment-post span a:hover {
+  color: #fff;
+}
+
+/* line 844, ok.scss */
+#content .liste_table
+#content .liste_table .colonne_medias .thumb {
+  float: left;
+}
+
+/* Notification */
+/* line 847, ok.scss */
+#content .notif {
+  font-size: 20px;
+  text-align: center;
+  position: fixed;
+  top: -21px;
+  left: 0;
+  right: 0;
+  z-index: 10000;
+  padding: 20px 15px;
+  margin-bottom: 18px;
+  color: #404040;
+  background-color: #eedc94;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#fceec1), to(#eedc94));
+  background-image: -moz-linear-gradient(top, #fceec1, #eedc94);
+  background-image: -ms-linear-gradient(top, #fceec1, #eedc94);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fceec1), color-stop(100%, #eedc94));
+  background-image: -webkit-linear-gradient(top, #fceec1, #eedc94);
+  background-image: -o-linear-gradient(top, #fceec1, #eedc94);
+  background-image: linear-gradient(top, #fceec1, #eedc94);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fceec1', endColorstr='#eedc94', GradientType=0);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #eedc94 #eedc94 #e4c652;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  border-width: 1px;
+  border-style: solid;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+}
+
+/* line 848, ok.scss */
+#content .content .notif {
+  margin-bottom: 10px;
+}
+
+/* line 849, ok.scss */
+#content .notif strong {
+  font-weight: bold;
+  color: inherit;
+}
+
+/* line 850, ok.scss */
+#content .notif.success {
+  background-color: #57a957;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#62c462), to(#57a957));
+  background-image: -moz-linear-gradient(top, #62c462, #57a957);
+  background-image: -ms-linear-gradient(top, #62c462, #57a957);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #62c462), color-stop(100%, #57a957));
+  background-image: -webkit-linear-gradient(top, #62c462, #57a957);
+  background-image: -o-linear-gradient(top, #62c462, #57a957);
+  background-image: linear-gradient(top, #62c462, #57a957);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#57a957', GradientType=0);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #57a957 #57a957 #3d773d;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: #FFF;
+}
+
+/* line 851, ok.scss */
+#content .notif.error, #content .bloc .notif.error {
+  background-color: #c43c35;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
+  background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -ms-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
+  background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: linear-gradient(top, #ee5f5b, #c43c35);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#c43c35', GradientType=0);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #c43c35 #c43c35 #882a25;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: #FFF!important;
+}
+
+/* line 852, ok.scss */
+#content .notif.info {
+  background-color: #339bb9;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#5bc0de), to(#339bb9));
+  background-image: -moz-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: -ms-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5bc0de), color-stop(100%, #339bb9));
+  background-image: -webkit-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: -o-linear-gradient(top, #5bc0de, #339bb9);
+  background-image: linear-gradient(top, #5bc0de, #339bb9);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5bc0de', endColorstr='#339bb9', GradientType=0);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #339bb9 #339bb9 #22697d;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  color: #FFF;
+}
+
+/* line 854, ok.scss */
+#content .error, #content .error label, #content .error input, #content .error-message, #content .error textarea {
+  color: #9D261D !important;
+  border-color: #C87872 !important;
+}
+
+/* line 855, ok.scss */
+#content .error input, #content .error textarea {
+  background-color: #FAE5E3 !important;
+}
+
+/* line 856, ok.scss */
+#content .error-message {
+  display: block;
+}
+
+/* -- Bloc central -- */
+/* line 860, ok.scss */
+.blocsCentral {
+  width: 70%;
+  display: inline-block;
+  margin-right: 2%;
+  vertical-align: top;
+  margin-top: 25px;
+}
+
+/* line 862, ok.scss */
+#blocsAjoutCote {
+  display: inline-block;
+  width: 19%;
+  vertical-align: top;
+  padding: 5px;
+}
+
+/* line 863, ok.scss */
+#blocsAjoutCote .add_meta {
+  margin-bottom: 15px;
+  width: 280px;
+  background-color: whiteSmoke;
+  border: 1px solid #DFDFDF;
+  -moz-box-shadow: inset 0 1px 0 #fff;
+  -webkit-box-shadow: inset 0 1px 0 #fff;
+  box-shadow: inset 0 1px 0 #fff;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+
+/* line 864, ok.scss */
+#blocsAjoutCote .add_meta h3 {
+  font-size: 15px;
+  font-weight: normal;
+  padding: 7px 10px;
+  margin: 0;
+  line-height: 1;
+  color: #464646;
+  border-bottom: 1px solid #DFDFDF;
+  background-color: #F1F1F1;
+}
+
+/* line 865, ok.scss */
+#blocsAjoutCote .add_meta .inside {
+  line-height: 1.4em;
+  padding: 5px;
+}
+
+/* line 866, ok.scss */
+#blocsAjoutCote .add_meta .inside .submit {
+  margin-top: 10px;
+}
+
+/* line 867, ok.scss */
+#edit_post input#title_form, #edit_post input#slug_form {
+  width: 100%;
+  height: 32px;
+  font-size: 1.7em;
+}
+
+/* line 868, ok.scss */
+#edit_post textarea {
+  width: 100%;
+}
+
+/* line 869, ok.scss */
+#edit_post .placeholder label {
+  position: absolute;
+  height: 32px;
+  line-height: 32px;
+  margin-left: 15px;
+  color: #BBB;
+  font-size: 1.7em;
+}
+
+/* line 871, ok.scss */
+#blocsAjoutCote #bloc_categorie legend {
+  display: none;
+}
+
+/* line 872, ok.scss */
+#blocsAjoutCote #bloc_categorie .checkbox {
+  height: 20px;
+  line-height: 20px;
+}
+
+/* line 874, ok.scss */
+#blocsAjoutCote #bloc_categorie .checkbox label {
+  margin-left: 5px;
+}
+
+/* line 876, ok.scss */
+#blocsAjoutCote #bloc_prix input {
+  margin-bottom: 5px;
+  width: 50px;
+}
+
+/* line 877, ok.scss */
+#blocsAjoutCote #bloc_prix label {
+  display: inline-block;
+  width: 100px;
+}
+
 /* ---------------------------------------
 			Content Dashboard
 ------------------------------------------ */
 /* -- Dashboard aujourdhui */
-/* line 807, ok.scss */
+/* line 884, ok.scss */
 #dashboard_aujourdhui .bloc_contenu thead th {
   padding-bottom: 10px;
   font: italic 1.2em sans-serif;
   color: #888;
 }
 
-/* line 812, ok.scss */
+/* line 889, ok.scss */
 #dashboard_aujourdhui .bloc_contenu tbody td {
   padding-top: 15px;
 }
 
-/* line 813, ok.scss */
+/* line 890, ok.scss */
 #dashboard_aujourdhui .bloc_contenu tbody tr td {
   padding: 10px 0;
   border-top: 1px solid #DADADA;
 }
 
-/* line 814, ok.scss */
+/* line 891, ok.scss */
 #dashboard_aujourdhui .bloc_contenu tbody tr:hover td {
   border-top: 1px solid #BABABA;
   cursor: default;
 }
 
-/* line 815, ok.scss */
+/* line 892, ok.scss */
 #dashboard_aujourdhui .bloc_contenu tbody h4 {
   color: #404040;
   font-size: 1.8em;
 }
 
-/* line 818, ok.scss */
+/* line 895, ok.scss */
 #derniers_commentaires .item_commentaire {
   padding: 10px 0;
   border-bottom: 1px solid #DADADA;
 }
 
-/* line 819, ok.scss */
+/* line 896, ok.scss */
 #derniers_commentaires .item_commentaire:hover {
   border-bottom: 1px solid #BABABA;
 }
 
-/* line 820, ok.scss */
+/* line 897, ok.scss */
 #derniers_commentaires .item_commentaire img {
   display: inline-block;
   vertical-align: top;
   margin-right: 5px;
 }
 
-/* line 821, ok.scss */
+/* line 898, ok.scss */
 #derniers_commentaires .item_commentaire_wrap {
   display: inline-block;
   width: 320px;
 }
 
-/* line 822, ok.scss */
+/* line 899, ok.scss */
 #derniers_commentaires .item_commentaire_wrap .item_commentaire_meta {
   margin-bottom: 10px;
 }
