--- a/app/webroot/css/styles.scss
+++ b/app/webroot/css/styles.scss
@@ -78,7 +78,7 @@ a, p a {
 	color: black;
 	outline: 0;}
 
-a:hover 			{outline: 0; color:white;}
+a:hover 			{outline: 0;}
 a:focus, a:active	{outline: 0;}
 a:visited			{color: white;}
 a img 				{border: none}
@@ -495,7 +495,7 @@ form input[type=text], form textarea {
 	border:none;
 	background: #fff;
 	width:200px;
-	height:28px;
+	height:23px;
 	padding:0 10px;
 	margin:5px 0 15px 0;
 	color:#686464;
@@ -513,8 +513,7 @@ form textarea {
 	max-width:380px;
 	max-height:260px;
 	height: 150px;
-	margin:0;
-	padding-top:10px;}
+	margin:0;}
 
 fieldset {border:0 none;}
 legend {display:hidden;}
@@ -528,11 +527,6 @@ legend {display:hidden;}
 	cursor: pointer;
 	background: url('images/bouton_submit.png') top left no-repeat;}
 
-.envoyer:hover{
-	opacity: 0.8;
-	-moz-opacity: 0.8;
-	filter:alpha(opacity=8);}
-
 /*adresse-sociaux*/
 #reseauxSociaux {
 	color:#878383;
@@ -545,7 +539,6 @@ legend {display:hidden;}
 	margin:10px 40px 0 0;}
 
 #reseauxSociaux a img{width:150px;}
-
 #reseauxSociaux a:hover img{
 	opacity: 0.8;
 	-moz-opacity: 0.8;
@@ -568,44 +561,61 @@ legend {display:hidden;}
 					Guestbook
 ------------------------------------------ */
 .mariee{visibility: hidden;}
-.comment{border: 1px solid #999;width: 600px;margin: 0 auto;border-radius: 5px;margin-bottom: 5px;border:1px solid red;}
-.comment .comment-title{background: #ccc;padding: 5px;border-bottom: 1px solid #999}
-.comment .comment-title .action{float: right}
-.comment .comment-content{padding: 5px}
 
 #guestbook {border-top:1px solid #D9D9D9;padding-top:10px;}
-
 #guestbook_form {
 	padding:10px 20px;
 	background-color: #fff;
-	border:none;
+	border:2px dashed black;
 	display: inline-block;
-	width:400px;
-	margin:20px 10px 30px 0;
-	@include contenu;}
+	margin:30px 10px 30px 20px;}
 
 #guestbook_form label {
 	display: inline-block;
 	vertical-align:top;
-	vertical-align:top;
-	width:100px;}
+	width:100px;
+	padding:9px 0 0 12px;}
 
-#guestbook_form input[type=text] {width:180px;} 
+#guestbook_form input[type=text] {width:180px;padding-left:24px;}
 
-#guestbook_form .submit {
-	display: inline-block;
-	margin:20px 0 0 20px;}
+#GuestbookAuthor, #GuestbookAuthorEmail, #GuestbookAuthorUrl, #GuestbookContent {background-image: url(images/c-icons.png);background-repeat: no-repeat;}
+#GuestbookAuthor {background-position: 7px 4px;}
+#GuestbookAuthorEmail {background-position: 7px -22px;}
+#GuestbookAuthorUrl {background-position: 7px -48px;}
+#GuestbookContent {background-position: 7px -75px;padding:6px 0 0 26px;}
+
+#guestbook_form .add_comment input, #guestbook_form .add_comment:hover input{
+	border:none;
+	width:350px;
+	height:39px;
+	display:block;
+	background-image: url(images/bouton_submit_comment.png);
+	background-repeat:no-repeat;}
+
+#guestbook_form .add_comment input {background-position: 0 top;}
+#guestbook_form .add_comment:hover input{
+	cursor: pointer;
+	background-position:0 bottom;}
 
 form .placeholder {margin-left:0;}
-form .placeholder label {position: absolute;line-height:36px; margin-left:15px;}
+form .placeholder label {position: absolute; margin-left:15px;}
 
 #guestbook_image {display: inline-block;vertical-align:top;margin-top:100px;}
 
+/* -- Commentaires -- */
+#guestbook p {font:bold 2.2em 'riesling';}
+.comment {width: 600px;margin:20px 0 5px;}
+.comment #date {display:inline-block;vertical-align:top;color:#998F76;font-weight:bold;width:100px;margin-right:10px;border-right: 1px solid #999;text-align:right;padding-right:15px;}
+.comment #comment_content {display: inline-block;vertical-align:top;border:1px solid red;width:450px;}
+.comment .comment-title{padding: 5px;}
+.comment .comment-title .action{float: right;}
+.comment .comment-content{}
+span.comment-author{display: block;margin-top:15px;color:#09f;font-weight:bold;}
 
 /* ---------------------------------------
 					Footer
 ------------------------------------------ */
 
-footer{margin:0 auto;width:100%;padding:15px 0 10px;text-align:center;color:#747474;font-size:.9em}
+footer{margin:0 auto;width:100%;padding:10px 0;text-align:center;color:#747474;font-size:.9em}
 footer a,footer a:visited,footer a:link{color:#747474;}
 footer a:hover{text-decoration:underline;color:#444;}
