--- a/app/webroot/css/styles.scss
+++ b/app/webroot/css/styles.scss
@@ -394,9 +394,9 @@ aside#image-accessoires img{
 
 .produit_metas {margin-left:10px;}
 .produit_metas span.prix {font-size:1.2em; font-weight:bold;color:#AA4673;margin:10px 0 20px;display: inline-block;}
-.produit_metas p{line-height:12px;text-align:center;}
+.produit_metas p{padding-bottom:4px;text-align:center;}
 
-#catalogue_accessoire {width:950px;margin-top:30px;border-top:1px dotted #c1c1c1;}
+#catalogue_accessoire {width:950px;margin-top:25px;border-top:1px dashed #C1C1C1;}
 
 /* -- blocs catalogue -- */
 .blocs h1 a{color:#000;}
