--- a/app/webroot/css/styles.css
+++ b/app/webroot/css/styles.css
@@ -442,13 +442,13 @@ ul#nav_menu li.sub:hover ul {
   margin: 0;
 }
 
-/* line 326, styles.scss */
+/* line 325, styles.scss */
 .blocs {
   padding: 20px;
 }
 
 /* -- Image accessoires -- */
-/* line 330, styles.scss */
+/* line 329, styles.scss */
 aside#image-accessoires {
   display: inline-block;
   vertical-align: top;
@@ -457,7 +457,7 @@ aside#image-accessoires {
   left: 20px;
 }
 
-/* line 337, styles.scss */
+/* line 336, styles.scss */
 aside#image-accessoires img {
   width: 313px;
   height: 282px;
@@ -466,18 +466,18 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				catalogue
 ------------------------------------------ */
-/* line 345, styles.scss */
+/* line 344, styles.scss */
 .produit {
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 346, styles.scss */
+/* line 345, styles.scss */
 .catalogue #filtre_produit {
   height: 20px;
 }
 
-/* line 347, styles.scss */
+/* line 346, styles.scss */
 .catalogue {
   position: relative;
   display: inline-block;
@@ -485,7 +485,7 @@ aside#image-accessoires img {
   margin: 0 auto;
 }
 
-/* line 353, styles.scss */
+/* line 352, styles.scss */
 .catalogue h1.titre_produit {
   display: block;
   vertical-align: top;
@@ -494,7 +494,7 @@ aside#image-accessoires img {
   padding: 10px 0 20px 30px;
 }
 
-/* line 360, styles.scss */
+/* line 359, styles.scss */
 .catalogue figure {
   position: relative;
   display: inline-block;
@@ -502,25 +502,25 @@ aside#image-accessoires img {
   margin: 0;
 }
 
-/* line 366, styles.scss */
+/* line 365, styles.scss */
 .catalogue figure img {
   border: 1px solid white;
   padding: 3px;
   margin: 10px;
 }
 
-/* line 371, styles.scss */
+/* line 370, styles.scss */
 .catalogue nav {
   margin-left: 15px;
 }
 
-/* line 373, styles.scss */
+/* line 372, styles.scss */
 .catalogue nav figure:hover figcaption {
   color: #AA4673;
   text-decoration: underline;
 }
 
-/* line 377, styles.scss */
+/* line 376, styles.scss */
 .catalogue figcaption {
   background-color: #fff;
   color: black;
@@ -530,7 +530,7 @@ aside#image-accessoires img {
   bottom: 14px;
 }
 
-/* line 385, styles.scss */
+/* line 384, styles.scss */
 .catalogue img {
   display: block;
   margin: 10px 0;
@@ -545,19 +545,19 @@ aside#image-accessoires img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 391, styles.scss */
+/* line 390, styles.scss */
 .catalogue img:hover {
   opacity: 0.8;
   -moz-opacity: 0.8;
   filter: alpha(opacity=8);
 }
 
-/* line 396, styles.scss */
+/* line 395, styles.scss */
 .produit_metas {
   margin-left: 10px;
 }
 
-/* line 397, styles.scss */
+/* line 396, styles.scss */
 .produit_metas span.prix {
   font-size: 1.2em;
   font-weight: bold;
@@ -566,13 +566,13 @@ aside#image-accessoires img {
   display: inline-block;
 }
 
-/* line 398, styles.scss */
+/* line 397, styles.scss */
 .produit_metas p {
   padding-bottom: 4px;
   text-align: center;
 }
 
-/* line 400, styles.scss */
+/* line 399, styles.scss */
 #catalogue_accessoire {
   width: 950px;
   margin-top: 25px;
@@ -580,23 +580,23 @@ aside#image-accessoires img {
 }
 
 /* -- blocs catalogue -- */
-/* line 403, styles.scss */
+/* line 402, styles.scss */
 .blocs h1 a {
   color: #000;
 }
 
 /* -- Recapitulatif produits -- */
-/* line 407, styles.scss */
+/* line 406, styles.scss */
 #filtre_produit {
   margin: 20px 10px;
 }
 
-/* line 408, styles.scss */
+/* line 407, styles.scss */
 #filtre_produit .input select {
   float: left;
 }
 
-/* line 410, styles.scss */
+/* line 409, styles.scss */
 .toggle {
   display: inline-block;
   background: url("images/white-arrow.png") 1px -63px no-repeat;
@@ -604,7 +604,7 @@ aside#image-accessoires img {
   height: 18px;
 }
 
-/* line 416, styles.scss */
+/* line 415, styles.scss */
 #show_filter .active_arrow {
   background-position: 0 -15px;
 }
@@ -612,7 +612,7 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				Actulités
 ------------------------------------------ */
-/* line 421, styles.scss */
+/* line 420, styles.scss */
 .blocs #actus {
   min-height: 500px;
 }
@@ -620,26 +620,26 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				Fiche produits
 ------------------------------------------ */
-/* line 427, styles.scss */
+/* line 426, styles.scss */
 .fiche h4 {
   margin-left: 0;
 }
 
-/* line 428, styles.scss */
+/* line 427, styles.scss */
 .produit-gauche {
   width: 300px;
   float: left;
   padding: 0;
 }
 
-/* line 429, styles.scss */
+/* line 428, styles.scss */
 .produit-droit {
   width: 225px;
   float: left;
   padding-left: 25px;
 }
 
-/* line 430, styles.scss */
+/* line 429, styles.scss */
 .fiche .photos {
   border: 3px solid #DBE5E8;
   -webkit-border-radius: 0px;
@@ -652,7 +652,7 @@ aside#image-accessoires img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 431, styles.scss */
+/* line 430, styles.scss */
 .fiche .prix {
   display: block;
   float: none;
@@ -666,7 +666,7 @@ aside#image-accessoires img {
   text-shadow: 1px 1px 2px #999;
 }
 
-/* line 432, styles.scss */
+/* line 431, styles.scss */
 .fiche .ancien-prix {
   font-weight: bold;
   text-decoration: line-through;
@@ -676,19 +676,19 @@ aside#image-accessoires img {
   font-size: 1.1em;
 }
 
-/* line 433, styles.scss */
+/* line 432, styles.scss */
 .fiche .description {
   border-bottom: 1px solid #D9D9D9;
   padding-bottom: 11px;
   margin-bottom: 7px;
 }
 
-/* line 434, styles.scss */
+/* line 433, styles.scss */
 .fiche .description li {
   line-height: 18px;
 }
 
-/* line 435, styles.scss */
+/* line 434, styles.scss */
 .fiche .titre {
   font-size: 1.2em;
   font-weight: bold;
@@ -697,20 +697,20 @@ aside#image-accessoires img {
   text-decoration: underline;
 }
 
-/* line 436, styles.scss */
+/* line 435, styles.scss */
 .fiche .promo {
   border-bottom: 1px solid #D9D9D9;
   padding: 3px 0 20px;
 }
 
-/* line 437, styles.scss */
+/* line 436, styles.scss */
 .fiche .miniatures, .fiche .miniatures li {
   background: none;
   padding: 0;
   margin: 0;
 }
 
-/* line 438, styles.scss */
+/* line 437, styles.scss */
 .fiche .miniatures li a {
   float: left;
   border: 2px solid #D9D9D9;
@@ -726,7 +726,7 @@ aside#image-accessoires img {
   box-shadow: 1px 1px 14px #555555;
 }
 
-/* line 439, styles.scss */
+/* line 438, styles.scss */
 .fiche .miniatures li a:hover {
   border-color: #AA4673;
   /*+opacity:80%;*/
@@ -736,17 +736,17 @@ aside#image-accessoires img {
   opacity: 0.8;
 }
 
-/* line 440, styles.scss */
+/* line 439, styles.scss */
 .fiche .tags a {
   text-decoration: underline;
 }
 
-/* line 441, styles.scss */
+/* line 440, styles.scss */
 .produit-partage a {
   text-decoration: none;
 }
 
-/* line 442, styles.scss */
+/* line 441, styles.scss */
 .produit-partage a:hover {
   opacity: 0.7;
   -moz-opacity: 0.7;
@@ -754,12 +754,12 @@ aside#image-accessoires img {
 }
 
 /* gallerie */
-/* line 446, styles.scss */
+/* line 445, styles.scss */
 .gallerie {
   overflow: none;
 }
 
-/* line 447, styles.scss */
+/* line 446, styles.scss */
 .gallerie h4 {
   line-height: 18px;
   padding: 20px 0 5px;
@@ -773,34 +773,34 @@ aside#image-accessoires img {
   text-shadow: 1px 1px 2px #999;
 }
 
-/* line 448, styles.scss */
+/* line 447, styles.scss */
 .gallerie h4 a {
   text-decoration: none;
 }
 
-/* line 449, styles.scss */
+/* line 448, styles.scss */
 .gallerie a {
   color: #444;
 }
 
-/* line 450, styles.scss */
+/* line 449, styles.scss */
 .gallerie a:hover {
   color: #AA4673;
   text-decoration: underline;
 }
 
-/* line 451, styles.scss */
+/* line 450, styles.scss */
 .gallerie p {
   padding: 5px 0;
 }
 
-/* line 452, styles.scss */
+/* line 451, styles.scss */
 .gallerie .blanc {
   background: #FFF;
   margin: 20px;
 }
 
-/* line 453, styles.scss */
+/* line 452, styles.scss */
 .gallerie .blanc h4 {
   font: bold 2.1em 'riesling';
 }
@@ -808,20 +808,20 @@ aside#image-accessoires img {
 /* ---------------------------------------
 				Partenariats
 ------------------------------------------ */
-/* line 459, styles.scss */
+/* line 458, styles.scss */
 #partenariats {
   color: #0F0F0F;
   margin: 0 auto;
   border: 1px solid red;
 }
 
-/* line 460, styles.scss */
+/* line 459, styles.scss */
 ul.ligne1, ul.ligne2 {
   margin: 20px 0;
   display: inline-block;
 }
 
-/* line 461, styles.scss */
+/* line 460, styles.scss */
 ul.ligne1 li, ul.ligne2 li {
   display: inline-block;
   vertical-align: top;
@@ -831,35 +831,35 @@ ul.ligne1 li, ul.ligne2 li {
   text-align: center;
 }
 
-/* line 462, styles.scss */
+/* line 461, styles.scss */
 ul.ligne1 li:first-child, ul.ligne2 li:first-child {
   border: 0;
 }
 
-/* line 463, styles.scss */
+/* line 462, styles.scss */
 ul.ligne1 li ul li, ul.ligne2 li ul li {
   padding: 0;
   margin: 3px 0;
   border: none;
 }
 
-/* line 464, styles.scss */
+/* line 463, styles.scss */
 ul.ligne1 li h3, ul.ligne2 li h3 {
   margin-bottom: 15px;
   font: bold 2.2em 'riesling';
 }
 
-/* line 465, styles.scss */
+/* line 464, styles.scss */
 ul.ligne1 ul li.site_web, ul.ligne2 ul li.site_web {
   padding-top: 15px;
 }
 
-/* line 466, styles.scss */
+/* line 465, styles.scss */
 ul.ligne2 li#dernier {
   border-right: 1px solid #E3E3E3;
 }
 
-/* line 467, styles.scss */
+/* line 466, styles.scss */
 ul.ligne2 li#avant_dernier {
   border: none;
 }
@@ -867,7 +867,7 @@ ul.ligne2 li#avant_dernier {
 /* ---------------------------------------
 				Contact
 ------------------------------------------ */
-/* line 473, styles.scss */
+/* line 472, styles.scss */
 #formContact {
   position: relative;
   display: inline-block;
@@ -876,7 +876,7 @@ ul.ligne2 li#avant_dernier {
   padding: 0;
 }
 
-/* line 480, styles.scss */
+/* line 479, styles.scss */
 #formContact legend {
   font: normal 4em 'riesling';
   text-align: left;
@@ -884,20 +884,20 @@ ul.ligne2 li#avant_dernier {
   padding: 40px 0 40px 30px;
 }
 
-/* line 486, styles.scss */
+/* line 485, styles.scss */
 #formContact .mariee {
   visibility: hidden;
   position: absolute;
 }
 
-/* line 490, styles.scss */
+/* line 489, styles.scss */
 form.formulaire {
   width: 360px;
   display: inline-block;
   vertical-align: top;
 }
 
-/* line 495, styles.scss */
+/* line 494, styles.scss */
 form input[type=text], form textarea {
   border: none;
   background: #fff;
@@ -915,7 +915,7 @@ form input[type=text], form textarea {
   box-shadow: inset 0px 0px 10px 0px #222;
 }
 
-/* line 511, styles.scss */
+/* line 510, styles.scss */
 form textarea {
   font-size: 1.3em;
   width: 330px;
@@ -925,17 +925,17 @@ form textarea {
   margin: 0;
 }
 
-/* line 519, styles.scss */
+/* line 518, styles.scss */
 fieldset {
   border: 0 none;
 }
 
-/* line 520, styles.scss */
+/* line 519, styles.scss */
 legend {
   display: hidden;
 }
 
-/* line 522, styles.scss */
+/* line 521, styles.scss */
 .envoyer input {
   margin: 10px 0 0 230px;
   width: 120px;
@@ -947,26 +947,26 @@ legend {
 }
 
 /*adresse-sociaux*/
-/* line 532, styles.scss */
+/* line 531, styles.scss */
 #reseauxSociaux {
   color: #878383;
   font-size: 1.3em;
   margin-left: 15px;
 }
 
-/* line 537, styles.scss */
+/* line 536, styles.scss */
 #reseauxSociaux a {
   display: inline-block;
   vertical-align: top;
   margin: 10px 40px 0 0;
 }
 
-/* line 542, styles.scss */
+/* line 541, styles.scss */
 #reseauxSociaux a img {
   width: 150px;
 }
 
-/* line 543, styles.scss */
+/* line 542, styles.scss */
 #reseauxSociaux a:hover img {
   opacity: 0.8;
   -moz-opacity: 0.8;
@@ -974,7 +974,7 @@ legend {
 }
 
 /* -- planGoogle -- */
-/* line 551, styles.scss */
+/* line 550, styles.scss */
 #plan_google {
   display: inline-block;
   vertical-align: top;
@@ -995,18 +995,18 @@ legend {
 /* ---------------------------------------
 					Guestbook
 ------------------------------------------ */
-/* line 564, styles.scss */
+/* line 563, styles.scss */
 .mariee {
   visibility: hidden;
 }
 
-/* line 566, styles.scss */
+/* line 565, styles.scss */
 #guestbook {
   border-bottom: 1px solid #D9D9D9;
   margin-top: 15px;
 }
 
-/* line 567, styles.scss */
+/* line 566, styles.scss */
 #guestbook_form {
   padding: 10px 20px;
   background-color: #fff;
@@ -1015,7 +1015,7 @@ legend {
   margin: 30px 10px 30px 20px;
 }
 
-/* line 574, styles.scss */
+/* line 573, styles.scss */
 #guestbook_form label {
   display: inline-block;
   vertical-align: top;
@@ -1023,40 +1023,40 @@ legend {
   padding: 9px 0 0 12px;
 }
 
-/* line 580, styles.scss */
+/* line 579, styles.scss */
 #guestbook_form input[type=text] {
   width: 180px;
   padding-left: 24px;
 }
 
-/* line 582, styles.scss */
+/* line 581, styles.scss */
 #GuestbookAuthor, #GuestbookAuthorEmail, #GuestbookAuthorUrl, #GuestbookContent {
   background-image: url(images/c-icons.png);
   background-repeat: no-repeat;
 }
 
-/* line 583, styles.scss */
+/* line 582, styles.scss */
 #GuestbookAuthor {
   background-position: 7px 4px;
 }
 
-/* line 584, styles.scss */
+/* line 583, styles.scss */
 #GuestbookAuthorEmail {
   background-position: 7px -22px;
 }
 
-/* line 585, styles.scss */
+/* line 584, styles.scss */
 #GuestbookAuthorUrl {
   background-position: 7px -48px;
 }
 
-/* line 586, styles.scss */
+/* line 585, styles.scss */
 #GuestbookContent {
   background-position: 7px -75px;
   padding: 6px 0 0 26px;
 }
 
-/* line 588, styles.scss */
+/* line 587, styles.scss */
 #guestbook_form .add_comment input, #guestbook_form .add_comment:hover input {
   border: none;
   width: 350px;
@@ -1066,29 +1066,29 @@ legend {
   background-repeat: no-repeat;
 }
 
-/* line 596, styles.scss */
+/* line 595, styles.scss */
 #guestbook_form .add_comment input {
   background-position: 0 top;
 }
 
-/* line 597, styles.scss */
+/* line 596, styles.scss */
 #guestbook_form .add_comment:hover input {
   cursor: pointer;
   background-position: 0 bottom;
 }
 
-/* line 599, styles.scss */
+/* line 598, styles.scss */
 form .placeholder {
   margin-left: 0;
 }
 
-/* line 600, styles.scss */
+/* line 599, styles.scss */
 form .placeholder label {
   position: absolute;
   margin-left: 15px;
 }
 
-/* line 602, styles.scss */
+/* line 601, styles.scss */
 #guestbook_image {
   display: inline-block;
   vertical-align: top;
@@ -1096,18 +1096,18 @@ form .placeholder label {
 }
 
 /* -- Commentaires -- */
-/* line 605, styles.scss */
+/* line 604, styles.scss */
 #guestbook p {
   font: bold 2em 'riesling';
 }
 
-/* line 606, styles.scss */
+/* line 605, styles.scss */
 .comment {
   margin: 20px 0 10px;
 }
 
-/* line 607, styles.scss */
-.comment #date {
+/* line 606, styles.scss */
+.comment .date {
   display: inline-block;
   vertical-align: top;
   width: 100px;
@@ -1117,25 +1117,25 @@ form .placeholder label {
   padding-right: 25px;
 }
 
-/* line 608, styles.scss */
-.comment #comment_content {
+/* line 607, styles.scss */
+.comment .comment_content {
   display: inline-block;
   vertical-align: top;
   width: 450px;
   text-align: left;
 }
 
-/* line 610, styles.scss */
+/* line 609, styles.scss */
 .comment .comment-title {
   padding: 5px;
 }
 
-/* line 611, styles.scss */
+/* line 610, styles.scss */
 .comment .comment-title .action {
   float: right;
 }
 
-/* line 613, styles.scss */
+/* line 612, styles.scss */
 span.comment-author {
   display: block;
   margin-top: 15px;
@@ -1144,20 +1144,20 @@ span.comment-author {
 }
 
 /* -- date -- */
-/* line 616, styles.scss */
+/* line 615, styles.scss */
 span.jour, span.mois, span.annee {
   color: #998F76;
   font-weight: bold;
 }
 
-/* line 617, styles.scss */
+/* line 616, styles.scss */
 span.jour {
   font-size: 2.4em;
   padding: 0;
   letter-spacing: -2px;
 }
 
-/* line 618, styles.scss */
+/* line 617, styles.scss */
 span.mois {
   vertical-align: top;
   padding: 4px 0 0 3px;
@@ -1165,7 +1165,7 @@ span.mois {
   display: inline-block;
 }
 
-/* line 619, styles.scss */
+/* line 618, styles.scss */
 span.annee {
   font-weight: normal;
   position: absolute;
@@ -1177,7 +1177,7 @@ span.annee {
   line-height: 13px;
 }
 
-/* line 620, styles.scss */
+/* line 619, styles.scss */
 span.heure {
   color: #29537D;
   font-size: .8em;
@@ -1186,23 +1186,23 @@ span.heure {
 }
 
 /* -- add_commentaire -- */
-/* line 623, styles.scss */
+/* line 622, styles.scss */
 #add_commentaire {
   margin: 0 auto;
 }
 
-/* line 624, styles.scss */
+/* line 623, styles.scss */
 #add_commentaire h1 {
   margin: 30px auto 10px;
 }
 
-/* line 625, styles.scss */
+/* line 624, styles.scss */
 #add_commentaire h1 a:hover {
   color: #AA4673;
   text-decoration: underline;
 }
 
-/* line 626, styles.scss */
+/* line 625, styles.scss */
 #add_commentaire h1 img {
   margin: 0 30px 0 180px;
   display: inline-block;
@@ -1212,7 +1212,7 @@ span.heure {
 /* ---------------------------------------
 					Footer
 ------------------------------------------ */
-/* line 632, styles.scss */
+/* line 631, styles.scss */
 footer {
   margin: 0 auto;
   width: 100%;
@@ -1222,12 +1222,12 @@ footer {
   font-size: .9em;
 }
 
-/* line 633, styles.scss */
+/* line 632, styles.scss */
 footer a, footer a:visited, footer a:link {
   color: #747474;
 }
 
-/* line 634, styles.scss */
+/* line 633, styles.scss */
 footer a:hover {
   text-decoration: underline;
   color: #444;
